picocuda/src/snapshots/picoc__optimizer__peephole__sub.snap
---
source: src/optimizer.rs
expression: graph
---
NodeDef(
    RefCell {
        value: Node {
            id: 7,
            opcode: Ret,
            typ: Bot,
            defs: [
                NodeDef(
                    RefCell {
                        value: Node {
                            id: 2,
                            opcode: Start,
                            typ: Bot,
                            defs: [],
                            uses: [
                                NodeUse(
                                    (Weak),
                                ),
                                NodeUse(
                                    (Weak),
                                ),
                                NodeUse(
                                    (Weak),
                                ),
                                NodeUse(
                                    (Weak),
                                ),
                            ],
                        },
                    },
                ),
                NodeDef(
                    RefCell {
                        value: Node {
                            id: 6,
                            opcode: Con,
                            typ: Int(
                                56,
                            ),
                            defs: [
                                NodeDef(
                                    RefCell {
                                        value: Node {
                                            id: 2,
                                            opcode: Start,
                                            typ: Bot,
                                            defs: [],
                                            uses: [
                                                NodeUse(
                                                    (Weak),
                                                ),
                                                NodeUse(
                                                    (Weak),
                                                ),
                                                NodeUse(
                                                    (Weak),
                                                ),
                                                NodeUse(
                                                    (Weak),
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ],
                            uses: [
                                NodeUse(
                                    (Weak),
                                ),
                            ],
                        },
                    },
                ),
            ],
            uses: [],
        },
    },
)
